# spotify-cli

./: README.md  pyproject.toml  serve.py
skills/spotify/: SKILL.md
src/spotify/: api.py  auth.py  cli.py  config.py  server.py
tests/: conftest.py  test_auth.py  test_devices.py  test_history.py  test_playback.py  test_playlist.py  test_queue.py  test_recommend.py  test_search.py  test_seek.py  test_top.py
