[project]
name = "spotify-cli"
version = "0.1.0"
description = "A CLI wrapper for the Spotify Web API"
requires-python = ">=3.12"
dependencies = [
    "click",
    "requests",
]

[project.scripts]
spotify = "spotify.cli:cli"

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spotify"]
